# DivergenceMethod

./: .gitignore  CMakeLists.txt  divergence_method.cpp  main.cpp
Model3D/: CMakeLists.txt
Model3D/include/: Maxflow.hpp  UnionFind.hpp
python/: plot_pdf.py
test/edge_normal_vec/: CMakeLists.txt  edge_normal_vec.cpp
test/gradient_viewer/: CMakeLists.txt  gradient_viewer.cpp
